--- a/config/paths.yaml
+++ b/config/paths.yaml
@@ -1,3 +1,3 @@
 fastq_dir: "data/fastq251222"
 reference_genome: "/home/pjho3/projects/ngs_dss/data/reference/hg38.fa"
-output_dir: "/media/pjho3/E/results"
+output_dir: "/home/pjho3/projects/ngs_dss/results"
